--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.1",
+    "@chakra-ui/react": "^2.10.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "axios": "^1.5.1",
+    "framer-motion": "^12.23.3",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
