--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "5xing",
+  "name": "wuxing",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,9 +12,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "axios": "^1.5.1",
+    "chart.js": "^4.5.0",
     "framer-motion": "^12.23.3",
+    "lunar-javascript": "^1.7.3",
     "next": "^13.5.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0"
   }
