更新Vercel配置，修复部署问题

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "public": true,
   "cleanUrls": true,
   "trailingSlash": false,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/src/pages/$1" }
+  "builds": [
+    { "src": "package.json", "use": "@vercel/next" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 } 
