--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     { "src": "package.json", "use": "@vercel/next" }
   ],
   "routes": [
+    { "src": "/styles/(.*)", "dest": "/styles/$1" },
     { "src": "/(.*)", "dest": "/$1" }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 } 
