--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.9",
@@ -20,5 +21,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.11.5"
   }
 }
