--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.11.5"
+    "@netlify/plugin-nextjs": "^5.11.5",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
