修复部署配置：移除根目录pages，配置vercel.json使用src/pages

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,13 @@
   "cleanUrls": true,
   "trailingSlash": false,
   "builds": [
-    { "src": "package.json", "use": "@vercel/next" }
+    { 
+      "src": "package.json", 
+      "use": "@vercel/next",
+      "config": {
+        "srcDir": "src"
+      }
+    }
   ],
   "routes": [
     { "src": "/styles/(.*)", "dest": "/styles/$1" },
