--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "export": "next export"
+    "start": "next start"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.9",
@@ -23,7 +22,6 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.11.5",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
