--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export"
+    "netlify-build": "next build"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.9",
@@ -23,7 +23,7 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.0.0",
+    "@netlify/plugin-nextjs": "^4.41.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
