--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "netlify-build": "next build"
+    "netlify-build": "next build && next export",
+    "export": "next export"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.9",
