--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export -o out",
     "start": "next start",
-    "netlify-build": "next build && next export",
-    "export": "next export"
+    "netlify-build": "next build && next export -o out",
+    "export": "next export -o out"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.10.9",
